ibc-solana/packages/solana-ibc-macros/tests/ui/recv_packet_returns_bare_result.stderr
error: Callback 'on_recv_packet' must return 'Result<Vec<u8>>', found '-> Result'
 --> tests/ui/recv_packet_returns_bare_result.rs:6:59
  |
6 |     pub fn on_recv_packet(ctx: Ctx, msg: OnRecvPacketMsg) -> Result {
  |                                                           ^^^^^^^^^
